# cv_resize_impl

./: CMakeLists.txt  README.md  main.cc
img/: face.txt
